Added 'belaz-truks' to .my-porfolio

--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -2,7 +2,7 @@
     <div class="container main-header__container">
         <div class="main-header__logo-wrap">
             <div class="main-header__logo-slogan main-header__logo-slogan_left"><span class="green">мое порт</span></div>
-            <a href="/" class="main-header__logo">
+            <a href="#home" class="main-header__logo">
                 <img class="main-header__logo-icon" src="images/logo-icon.png">
             </a>
             <div class="main-header__logo-slogan"><span class="green">olio</span></div>
