--- a/src/components/my-porfolio/my-porfolio.hbs
+++ b/src/components/my-porfolio/my-porfolio.hbs
@@ -2,7 +2,7 @@
     <div class="container my-portfolio__container">
         <h2>Портfolio</h2>
         <div class="my-portfolio__description">
-            <p>Здесь работы, которые я сверстал в свободное время. Dерстаю, все, что доступно и бесплатно для скачивания.</p>
+            <p>Здесь работы, которые я сверстал в свободное время. Верстаю бесплатные psd шаблоны, которые доступны в сети, а также подписан на рыссылки некоторых онлайн-курсов верстки и прочего програмирования, которые присылают psd-макеты, для прокачивания навыков, своим подписчикам.</p>
         </div>
         <ul class="my-portfolio__works-menu" id="filter">
             <li class="my-portfolio__works-menu-item">
@@ -173,7 +173,7 @@
                         <img src="images/folio366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
                     <div class="my-portfolio__work-hidden">
-                        <p class="my-portfolio__work-title">Лендинг портфолио веб-разработчика</p>
+                        <p class="my-portfolio__work-title">Мое портфолио</p>
                         <p class="my-portfolio__work-link">
                             <a href="https://leonziger.github.io/folio/" target="_blank">веб-ресурс</a>
                         </p>
@@ -181,7 +181,7 @@
                             <a href="https://github.com/leonziger/folio" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, slick-carousel, vex-js.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, jQuery Form Styler, slick-carousel, vex-js.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
@@ -217,6 +217,40 @@
                         <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
                         <p><span class="strong">Плагины/библиотеки:</span> jQuery,  slick-carousel.</p>
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/closes366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Сайт "Ателье одежды для мам и дочек"</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/closes-studio/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/closes-studio" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Vue.js, Bootstrap3, fullPage.js.</p>
+                        <p><span class="strong">Сборка проекта:</span> webpack.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/belaz366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Сайт "Запчасти для грузовиков Белаз"</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/belaz-trucks/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/belaz-trucks" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Bootstrap3, jquery.maskedinput, jquery-validation, vex-js.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
             </ul>
