--- a/src/components/contact-me/contact-me.scss
+++ b/src/components/contact-me/contact-me.scss
@@ -80,6 +80,14 @@
       padding: 5px 20px;
       color: #fff;
       font-size: 18px;
+
+      &-error {
+        border: 1px solid #fff;
+      }
+
+      &-valid {
+        border: 1px solid transparent;
+      }
     }
 
     &__area {
