--- a/src/components/social-media/social-media.hbs
+++ b/src/components/social-media/social-media.hbs
@@ -14,4 +14,7 @@
     <a href="https://vk.com/id241539225"  target="_blank" class="social-media__item social-media__item_vk">
         <i class="fab fa-vk"></i>
     </a>
+    <a href="https://web.telegram.org/#/im?p=@zylog"  target="_blank" class="social-media__item social-media__item_telegram">
+        <i class="fab fa-telegram-plane"></i>
+    </a>
 </div>
