--- a/src/components/contact-me/contact-me.hbs
+++ b/src/components/contact-me/contact-me.hbs
@@ -5,17 +5,13 @@
     <div class="container contact-me__container">
         <div class="contact-me__left">
             <div class="contact-me__description">
-                <p>Если у вас есть идеи и предложения, которые очень хочется обсудить, вы можете позвонить мне по телефону или написать на email.</p>
-                <!--<p>122 33rd Street East<br>-->
-                    <!--Saskatoon, SK<br>-->
-                    <!--S7K 1R9-->
-                <!--</p>-->
+                <p>Если у вас есть идеи и предложения, которые очень хочется обсудить, воспользуйтесь контактной формой.</p>
                 <ul class="contact-me__items">
                     <li class="contact-me__item">
-                        <div class="contact-me__item-name">Email:</div><div class="contact-me__item-value">infor@focal.com</div>
+                        <div class="contact-me__item-name">Сайт:</div><a class="contact-me__item-value" href="https://leonziger.github.io/folio/" target="_blank">https://leonziger.github.io/folio/</a>
                     </li>
                     <li class="contact-me__item">
-                        <div class="contact-me__item-name">Телефон:</div><div class="contact-me__item-value">+38-050-868-7240</div>
+                        <div class="contact-me__item-name">Github:</div><a class="contact-me__item-value" href="https://github.com/leonziger/" target="_blank">https://github.com/leonziger/</a>
                     </li>
                 </ul>
             </div>
