--- a/src/components/contact-me/contact-me.scss
+++ b/src/components/contact-me/contact-me.scss
@@ -62,6 +62,10 @@
       padding-right: 46px;
       width: 96px;
     }
+
+    &-value {
+      color: #919191;
+    }
   }
 
 }
@@ -103,6 +107,8 @@
 
 
   &__error-message {
+    display: block;
+    padding: 0 10px;
     color: #fff;
   }
 
