Removed some sections

--- a/src/components/about-me/about-me.hbs
+++ b/src/components/about-me/about-me.hbs
@@ -6,7 +6,7 @@
         <div class="about-me__right">
             <div class="title about-me__headline">Обо мне</div>
             <div class="about-me__description">
-                <p>Всем привет. Меня зовут Леонид. Я - начинающий веб-разработчик.</p>
+                <p>Всем привет. Меня зовут Леонид. Я - веб-разработчик.</p>
                 <p>Мою деятельность можно разделить на такие направления.</p>
             </div>
             <ul class="about-me__vantages">
@@ -21,7 +21,7 @@
                     <img src="images/me2.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">js/Jquery</div>
-                        <div class="about-me__vantage-description">Интегрирую на сайт популярные плагины или напишу несложные скрипты.</div>
+                        <div class="about-me__vantage-description">Интегрирую на сайт популярные плагины или пишу несложные скрипты.</div>
                     </div>
                 </li>
                 <li class="about-me__vantage">
@@ -35,7 +35,7 @@
                     <img src="images/me4.png" alt="" class="about-me__vantage-icon">
                     <div class="about-me__vantage-text">
                         <div class="about-me__vantage-title">Wordpress</div>
-                        <div class="about-me__vantage-description">Превращу html-верстку в Wordpress-тему. Внесу данные через плагин ACF.</div>
+                        <div class="about-me__vantage-description">Превращаю html-верстку в Wordpress-тему. Вношу данные через плагин ACF.</div>
                     </div>
                 </li>
             </ul>
