--- a/src/components/my-porfolio/my-porfolio.hbs
+++ b/src/components/my-porfolio/my-porfolio.hbs
@@ -2,7 +2,7 @@
     <div class="container my-portfolio__container">
         <h2>Портfolio</h2>
         <div class="my-portfolio__description">
-            <p>Здесь работы, которые я сверстал в свободное время. Верстаю бесплатные psd шаблоны, которые доступны в сети, а также подписан на рыссылки некоторых онлайн-курсов верстки, которые присылают psd-макеты своим подписчикам, для прокачивания навыков.</p>
+            <p>Верстаю psd шаблоны, которые доступны в сети или приходят в рассылках различных курсов и тренингов.</p>
         </div>
         <ul class="my-portfolio__works-menu" id="filter">
             <li class="my-portfolio__works-menu-item">
