--- a/src/components/my-skills/my-skills.hbs
+++ b/src/components/my-skills/my-skills.hbs
@@ -1,5 +1,5 @@
-<section class="my-skills" id="skills">
-    <div class="container my-skills__container">
+<section class="my-skills " id="skills">
+    <div class="container my-skills__container my-skills__delimiter">
         <div class="my-skills__left my-skills__left-correction">
             <h2 class="my-skills__headline">Мои навыки</h2>
             <ul class="my-skills__list">
