--- a/src/components/resume-edu-work/resume-edu-work.hbs
+++ b/src/components/resume-edu-work/resume-edu-work.hbs
@@ -8,7 +8,7 @@
             <a href="#" class="button my-resume__button">Скачать резюме</a>
         </div>
     </div>
-    <div class="my-edu">
+    <div class="my-edu" id="education">
         <div class="container my-skills__container my-skills__delimiter">
             <div class="my-skills__left">
                 <h2 class="my-skills__headline">Мое образование</h2>
@@ -20,7 +20,7 @@
             <div class="my-skills__right">
                 <ul class="my-work__jobs">
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Сертификат об окончании курсов javascript</div>
+                        <div class="my-work__job-title">Курсы javascript</div>
                         <div class="my-work__job-wrap">
                             <div class="my-work__job-company">easycode.com.ua</div>,&nbsp;
                             <div class="my-work__job-town">онлайн</div>&nbsp;/&nbsp;
@@ -33,7 +33,7 @@
                         </div>
                     </li>
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Сертификат об окончании курсов верстки</div>
+                        <div class="my-work__job-title">Курсы верстки 2.0</div>
                         <div class="my-work__job-wrap">
                             <div class="my-work__job-company">Курсы верстки</div>,&nbsp;
                             <div class="my-work__job-town">онлайн</div>&nbsp;/&nbsp;
@@ -46,7 +46,7 @@
                         </div>
                     </li>
                     <li class="my-work__job">
-                        <div class="my-work__job-title">Диплом преподавателя физики-информатики</div>
+                        <div class="my-work__job-title">Преподавание физики-информатики</div>
                         <div class="my-work__job-wrap">
                             <div class="my-work__job-company">ХГПИ</div>,&nbsp;
                             <div class="my-work__job-town">Херсон</div>&nbsp;/&nbsp;
@@ -62,8 +62,8 @@
             </div>
         </div>
     </div>
-    <div class="my-work">
-        <div class="container my-skills__container">
+    <div class="my-work" id="companies">
+        <div class="container my-skills__container my-skills__delimiter">
             <div class="my-skills__left">
                 <h2 class="my-skills__headline">Опыт работы</h2>
                 <div class="my-skills__description">
