--- a/src/components/resume-edu-work/resume-edu-work.scss
+++ b/src/components/resume-edu-work/resume-edu-work.scss
@@ -6,6 +6,7 @@
     padding: 101px 0;
     background-color: #f2f2f1;
     position: relative;
+    display: none;
 
     &:after {
       display: block;
