--- a/src/components/my-porfolio/my-porfolio.scss
+++ b/src/components/my-porfolio/my-porfolio.scss
@@ -15,6 +15,10 @@
     display: flex;
     margin: -9px auto 44px;
     padding: 0 70px;
+
+    @media (max-width: 992px) {
+      padding: 0 5px;
+    }
   }
 
   &__works {
