--- a/src/components/my-skills/my-skills.scss
+++ b/src/components/my-skills/my-skills.scss
@@ -1,10 +1,10 @@
 .my-skills {
   padding-top: 96px;
-  padding-bottom: 180px;
+  //padding-bottom: 180px;
+  padding-bottom: 0;
 
   @media(max-width: 992px) {
     padding-top: 50px;
-    padding-bottom: 50px;
   }
 
   &__delimiter {
@@ -13,6 +13,7 @@
 
   &__container {
     display: flex;
+    padding-bottom: 50px;
 
     @media(max-width: 992px) {
       flex-direction: column;
