--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -2,6 +2,7 @@
   padding-top: 84px;
   padding-bottom: 147px;
   background-color: #f2f2f1;
+  display: none;
 
   @media(max-width: 992px) {
     padding-top: 50px;
