--- a/src/components/contact-me/contact-me.scss
+++ b/src/components/contact-me/contact-me.scss
@@ -110,6 +110,13 @@
     display: block;
     padding: 0 10px;
     color: #fff;
+
+    @media(max-width: 375px) {
+      text-align: center;
+      font-size: 16px;
+      line-height: 1.2;
+      padding: 5px;
+    }
   }
 
   &__field {
