--- a/src/components/my-porfolio/my-porfolio.scss
+++ b/src/components/my-porfolio/my-porfolio.scss
@@ -12,7 +12,7 @@
   }
 
   &__description {
-    display: flex;
+    display: none;
     margin: -9px auto 44px;
     padding: 0 70px;
 
@@ -60,7 +60,6 @@
     @media(max-width: 1340px) {
       margin: 10px;
     }
-
 
     @media(max-width: 400px) {
       width: 300px;
