Added landing about hoverboards to portfolio

--- a/src/components/my-porfolio/my-porfolio.hbs
+++ b/src/components/my-porfolio/my-porfolio.hbs
@@ -232,7 +232,7 @@
                             <a href="https://github.com/leonziger/closes-studio" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Vue.js, Bootstrap3, fullPage.js.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Bootstrap3, fullPage.js.</p>
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
@@ -268,6 +268,41 @@
                         <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
                         <p><span class="strong">Плагины/библиотеки:</span> jQuery, Bootstrap4, jquery.maskedinput, jquery-validation.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/myresume366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Еще одна версия резюме</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/my-resume/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/my-resume" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> noUiSlider.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/rizorhover366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Лендинг о ховербордах</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="http://sitesdepot.ru/wp-rizor-hover/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/rizor-hover" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML(nunjucks)+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> slick, jQuery.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                        <p><span class="strong">Cms, плагины:</span> Wordpress, Advanced custom fields.</p>
                     </div>
                 </li>
             </ul>
