--- a/src/components/my-porfolio/my-porfolio.hbs
+++ b/src/components/my-porfolio/my-porfolio.hbs
@@ -5,22 +5,10 @@
             <p>Верстаю psd шаблоны, которые доступны в сети или приходят в рассылках различных курсов и тренингов.</p>
         </div>
         <ul class="my-portfolio__works-menu" id="filter">
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter="*" class="my-portfolio__works-menu-link current-link">All works</a>
-            </li>
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter=".pug" class="my-portfolio__works-menu-link">pug</a>
-            </li>
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter=".gulp" class="my-portfolio__works-menu-link">gulp</a>
-            </li>
-            <li class="my-portfolio__works-menu-item">
-                <a href="" data-filter=".webpack" class="my-portfolio__works-menu-link">webpack</a>
-            </li>
         </ul>
         <div class="my-portfolio__works-wrapper">
-            <ul class="my-portfolio__works">
-                <li class="my-portfolio__work">
+            <ul class="my-portfolio__works" id="portfolio-works">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/miami366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -35,7 +23,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="scss,jQuery,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/driving366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -50,7 +38,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="scss,jQuery,gulp,slick-carousel">
                     <div class="my-portfolio__work-visible">
                         <img src="images/volki366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -65,7 +53,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery, vanilla-text-mask, jquery.maskedinput, jquery-validation, vex-js, toastr.js">
                     <div class="my-portfolio__work-visible">
                         <img src="images/wezom366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -83,7 +71,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,vanilla-text-mask,jquery.maskedinput,jquery-validation,vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/ayudag366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -100,7 +88,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug, scss, jQuery,vanilla-text-mask,jquery.maskedinput,jquery-validation,vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/strat366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -113,11 +101,11 @@
                             <a href="https://github.com/leonziger/stratg" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML(pug)+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask, jquery.maskedinput, jquery-validation, vex-js.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,slick-carousel,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/shakers366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -134,7 +122,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="pug,scss,jQuery,vanilla-text-mask,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/suntour366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -151,7 +139,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, FlipClock, vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/buyheater366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -168,7 +156,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery,vanilla-text-mask, jquery.maskedinput, jquery-validation, jQueryFormStyler, slick-carousel, vex-js,gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/folio366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -185,7 +173,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work webpack">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Vue.js, Bootstrap3, webpack">
                     <div class="my-portfolio__work-visible">
                         <img src="images/invite366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -202,7 +190,7 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work webpack">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, slick-carousel, webpack">
                     <div class="my-portfolio__work-visible">
                         <img src="images/clubc366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -219,7 +207,7 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Bootstrap3, fullPage.js, webpack">
                     <div class="my-portfolio__work-visible">
                         <img src="images/closes366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -236,7 +224,7 @@
                         <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Bootstrap3, jquery.maskedinput, jquery-validation, vex-js, gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/belaz366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -253,7 +241,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,jQuery, Bootstrap4, jquery.maskedinput, jquery-validation, gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/rest366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -270,7 +258,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="handlebars,scss,noUiSlider, gulp">
                     <div class="my-portfolio__work-visible">
                         <img src="images/myresume366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -287,7 +275,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work" data-filter="nunjucks,scss,jQuery, slick-carousel, gulp, Wordpress, ACF">
                     <div class="my-portfolio__work-visible">
                         <img src="images/rizorhover366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -300,9 +288,9 @@
                             <a href="https://github.com/leonziger/rizor-hover" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML(nunjucks)+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> slick, jQuery.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> slick-carousel, jQuery.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
-                        <p><span class="strong">Cms, плагины:</span> Wordpress, Advanced custom fields.</p>
+                        <p><span class="strong">Cms, плагины:</span> Wordpress, ACF.</p>
                     </div>
                 </li>
             </ul>
